# labirinto

./: .gitignore  CMakeLists.txt  Pilha.c  main  main.c  maze.h  mazeStack.h
headers/: interfaceGrafica.h  mouseMovement.h  mouseStack.h  userStack.h
src/: Pilha.c  interfaceGrafica.c  mouseMovement.c  userStack.c
